# rag_with_chonkie

./: .dockerignore  .env.example  .gitignore  ABSTRACTION_PATTERN_SUMMARY.md  CHUNKING_STRATEGIES.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_GUIDE.md  DOCKER_SUMMARY.md  Dockerfile  Dockerfile.test  ENTITY_CONFIG_REFERENCE.md  GRAPH_INTEGRATION_GUIDE.md  GRAPH_SETUP_SUMMARY.md  PROJECT_ARCHITECTURE_SUMMARY.md  README.md  REORGANIZATION_GUIDE.md  TESTING.md  TESTING_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  migrate_imports.py  pyproject.toml  pytest.ini  test_graph_logfire.py  test_text_cleaning.py  verify_improvements.py
api/: __init__.py  app.py  config.py  graph_routes.py  templates.py  validators.py
api/routes/: __init__.py  document_routes.py  graph_routes.py  observability_routes.py
config/: README.md  __init__.py  app_config.py  graph_config.py
deployment/: .env.example  Dockerfile  Dockerfile.base  Dockerfile.postgres  Dockerfile.test  Makefile  build.sh  requirements.txt  setup.sh
docs/: 20260619_docker-setup.md  CHUNKING_STRATEGIES.md  GRAPH_LOGFIRE_INSTRUMENTATION.md  GRAPH_TABLE_INTERACTIONS.md  PROJECT_ARCHITECTURE_SUMMARY.md  TESTING.md
docs/plans/: 20260619_ui-blue-accent-design.md
docs/refactoring/: 20260619_high-priority.md  20260619_low-priority.md  20260619_medium-priority.md  20260619_refactoring-summary.md
document_processing/: __init__.py  api_routes.py  base_processor.py  chunk_pdf_with_chonkie.py  config.py  embed_chunks_to_db.py  extraction_flow.py  full_pipeline_pgvector.py  llm_operations.py  retrieval.py  templates.py  utils.py  validators.py
experiment/: experiment.ipynb  output_markdown.md  pdf_to_markdown.py  process_pdf_docling.py  process_pdf_hybrid.py  process_pdf_to_md.py  test_pdf_to_markdown.py
graph_processing/: __init__.py  clear_graph_data.py  entity_cache.py  entity_extraction.py  entity_types.py  extraction_service.py  gemini_provider.py  graph_service.py  json_utils.py  llm_provider.py  ollama_provider.py  relationship_extraction.py  retry_utils.py
ingestion/: __init__.py
ingestion/chunking/: __init__.py  chunker_factory.py  semantic_chunker.py
ingestion/embedding/: __init__.py  vector_store.py
ingestion/extraction/: __init__.py  extraction_flow.py
ingestion/processors/: __init__.py  base_processor.py  docx_processor.py  gemini_docling_parser.py  ollama_pdf_parser.py  page_utils.py  pdf_parser_base.py  pdf_parser_factory.py  pdf_processor.py  pdf_to_markdown.py  process_pdf_to_md.py  processor_factory.py  prompts.py  txt_processor.py  vlm_extractor.py
ingestion/text_cleaning/: __init__.py  (+2 more)
migrations/: 001_create_graph_tables.sql  002_create_llm_interactions.sql  runner.py
models/: __init__.py  graph_models.py  models.py
observability/: llm_logger.py
repositories/: __init__.py  connection_pool.py  table_repository.py
retrieval/: __init__.py  llm_operations.py  reranking.py  search.py  utils.py
scripts/: README.md  clear_graph_data.py  extract_existing_chunks.py
test/: DOCKER_TESTING.md  PYTEST_STRUCTURE_GUIDE.md  QUICKSTART.md  README.md  conftest.py  requirements-test.txt  run_tests_docker.bat  run_tests_docker.sh  test_database_connection.py  test_embedding.py  test_gemini_api.py  test_logfire.py  test_retrieval.py
tests/: conftest.py
worker/: celery_app.py  tasks.py
(+26 files in other folders)
