[tool.poetry]
name = "rag-with-llama"
version = "0.1.0"
description = "RAG application with Llama 3 and Gemini integration"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "api"}, {include = "ingestion"}, {include = "retrieval"}, {include = "graph_processing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.10.0"
torch = ">=2.3.1,<2.6.0"
sentence-transformers = "^3.0.0"
huggingface-hub = "^0.19.0"
psycopg2-binary = "^2.9.0"
pgvector = ">=0.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
greenlet = "^3.0.0"
asyncpg = "^0.29.0"
pypdf = "^3.17.0"
python-docx = "^1.0.0"
docx2txt = "^0.8"
tiktoken = "^0.5.2"
PyPDF2 = "^3.0.0"
chonkie = ">=1.4.0"
google-generativeai = ">=0.8.0"
rank-bm25 = "^0.2.2"
spacy = "^3.7.0"
spacy-transformers = "^1.3.0"
networkx = "^3.0"
streamlit = "^1.31.0"
fastapi = "^0.104.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
pydantic-ai = ">=0.0.7"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
logfire = "*"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
