[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-with-llama"
version = "1.0.0"
description = "RAG (Retrieval-Augmented Generation) system with pgvector, LLM integration, and knowledge graph extraction"
requires-python = ">=3.11"
authors = [{ name = "Viet Le" }]
readme = "README.md"

dependencies = [
    # Core ML Stack
    "numpy>=2.0.0,<3.0",
    "scipy>=1.10.0,<1.15.0",
    "torch>=2.3.1,<2.6.0",
    "torchvision>=0.18.0,<0.21.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.19.0,<1.0.0",
    # Vector Database & SQL
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=2.0.0",
    "asyncpg",
    # Document Processing Pipeline
    "docling>=2.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.0.0",
    "docx2txt>=0.8",
    "tiktoken>=0.5.2",
    "PyPDF2",
    # Chunking Strategy
    "chonkie>=1.4.0",
    "flatbuffers>=23.5.26",
    # LLM Integration
    "google-generativeai>=0.8.0",
    # ReRank
    "rank-bm25",
    # Graph & Knowledge Extraction
    "spacy>=3.7.0",
    "spacy-transformers>=1.3.0",
    "networkx>=3.0",
    # Web Interface & API
    "streamlit>=1.31.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=1.41.0",
    "pydantic-ai-slim[google]>=1.41.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Environment Management
    "python-dotenv>=1.0.0",
    # Production
    "gunicorn>=21.2.0",
    "logfire",
    "langfuse>=2.7.0,<3.0.0",
    # Async task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # PDF processing
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
rag-server = "api.app:app"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
